[package]
name = "sol-flex"
version = "0.1.0"
description = "A Solana program for flexible reflection and blocklist management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_flex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"