[package]
name = "sol-flex"
version = "0.1.0"
description = "A Solana program for flexible reflection and blocklist management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_flex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }